# error_category

./: proximos_passos.txt  pyproject.toml
categories_app/: admin.py  apps.py  forms.py  models.py
categories_app/migrations/: 0001_initial.py  0002_errorcategory_affected_table_and_more.py  0003_rename_situation_id_errorcategory_situation_and_more.py  0004_errorcategory_routine_id.py  0005_errorcategory_extra_data.py  0006_alter_errorcategory_options_and_more.py  0007_alter_errorcategory_options_and_more.py  0008_alter_errorcategory_category.py  0009_errorcategory_robot_id_alter_category_description_and_more.py  0010_rename_robot_id_errorcategory_robot.py  0011_alter_errorcategory_category.py
category/: admin.py  models.py
category/migrations/: 0001_initial.py  0002_alter_category_options_alter_errorcategory_options.py
core/: settings.py  urls.py
db/: admin.py  apps.py  models.py  urls.py  views.py
db/migrations/: 0001_initial.py
db/services/: rotinas.py
