[project]
name = "error-category"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "django>=5.2",
    "django-import-export>=4.3.7",
    "django-jazzmin>=3.0.1",
    "django-jet-reboot>=1.3.10",
    "psycopg2>=2.9.10",
    "psycopg2-binary>=2.9.10",
]
